"Atualizando" o projeto para o java 11