@@ -64,7 +64,7 @@ public class AbilitySqlDAO implements AbilityDAO {
         }
         st.close();
         if (!list.isEmpty()) {
-            return list.getFirst();
+            return list.get(0);
         }
         return null;
     }
