@@ -63,7 +63,7 @@ public class PlayerSqlDAO implements PlayerDAO {
         }
         st.close();
         if (!list.isEmpty()) {
-            return list.getFirst();
+            return list.get(0);
         }
         return null;
     }
